# GafferDenoise

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dependencies/OpenImageDenoise/: config.py
include/GafferDenoise/: DenoiseOIDN.h  Export.h  FrameProcessor.h  ImageAlgo.h  TypeIds.h
python/GafferDenoise/: __init__.py
python/GafferDenoiseUI/: DenoiseOIDNUI.py  __init__.py
src/GafferDenoise/: DenoiseOIDN.cpp  FrameProcessor.cpp  ImageAlgo.cpp
src/GafferDenoiseModule/: GafferDenoiseModule.cpp
startup/gui/: menu.py
